[project]
name = "voice-assistant"
version = "0.1.0"
description = "AI Voice Assistant Flask Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=21.2.0; sys_platform != 'win32'",
    "python-dotenv>=1.1.1",
    "waitress>=2.1.2; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
